--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A device management api that will be used API as a service and will be the point of communication with many device manufacturing companies",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node src/app.ts",
+    "dev": "nodemon src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -14,6 +14,7 @@
   "author": "Ridoan Khan Anik",
   "license": "MIT",
   "devDependencies": {
+    "nodemon": "^3.0.1",
     "standard": "^17.1.0",
     "ts-node": "^10.9.1"
   },
