--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "ts-node": "^10.9.1"
   },
   "dependencies": {
+    "@fastify/cors": "^8.3.0",
+    "colorette": "^2.0.20",
     "fastify": "^4.23.0",
     "mongoose": "^7.5.1"
   }
