--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "dependencies": {
     "@fastify/cors": "^8.3.0",
     "colorette": "^2.0.20",
+    "dotenv": "^16.3.1",
     "fastify": "^4.23.0",
+    "http-status": "^1.7.0",
     "mongoose": "^7.5.1"
   }
 }
