--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   },
   "dependencies": {
     "@fastify/cors": "^8.3.0",
+    "@types/dotenv": "^8.2.0",
+    "@types/joi": "^17.2.3",
     "colorette": "^2.0.20",
     "dotenv": "^16.3.1",
     "fastify": "^4.23.0",
     "http-status": "^1.7.0",
+    "joi": "^17.10.2",
     "mongoose": "^7.5.1"
   }
 }
