--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "colorette": "^2.0.20",
     "dotenv": "^16.3.1",
     "fastify": "^4.23.0",
+    "fastify-mongodb-sanitizer": "^1.2.2",
     "http-status": "^1.7.0",
     "joi": "^17.10.2",
     "mongoose": "^7.5.1"
