--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "A device management api that will be used API as a service and will be the point of communication with many device manufacturing companies",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "cross-env NODE_ENV=development nodemon src/app.ts",
+    "build": "tsc",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "format": "prettier --write .",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "keywords": [
     "API-AS-A-SERVICE",
@@ -14,20 +19,44 @@
   "author": "Ridoan Khan Anik",
   "license": "MIT",
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.5",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
+    "eslint": "^8.50.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-plugin-jest": "^27.4.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-security": "^1.7.1",
+    "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "lint-staged": "^14.0.1",
     "nodemon": "^3.0.1",
+    "prettier": "^3.0.3",
     "standard": "^17.1.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1"
   },
   "dependencies": {
     "@fastify/cors": "^8.3.0",
+    "@fastify/helmet": "^11.1.1",
     "@types/dotenv": "^8.2.0",
     "@types/joi": "^17.2.3",
     "colorette": "^2.0.20",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
+    "faker": "^6.6.6",
     "fastify": "^4.23.0",
     "fastify-mongodb-sanitizer": "^1.2.2",
     "http-status": "^1.7.0",
     "joi": "^17.10.2",
-    "mongoose": "^7.5.1"
+    "mongoose": "^7.5.1",
+    "mongoose-paginate-v2": "^1.7.4",
+    "pino-pretty": "^10.2.0",
+    "winston": "^3.10.0"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix"
   }
 }
