--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "@fastify/cors": "^8.3.0",
     "@fastify/helmet": "^11.1.1",
+    "@fastify/rate-limit": "^8.0.3",
     "@types/dotenv": "^8.2.0",
     "@types/joi": "^17.2.3",
     "colorette": "^2.0.20",
