--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^14.0.1",
+    "node-mocks-http": "^1.13.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "standard": "^17.1.0",
