--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "joi": "^17.10.2",
     "mongoose": "^7.5.1",
     "mongoose-paginate-v2": "^1.7.4",
+    "pino": "^8.15.4",
     "pino-pretty": "^10.2.0",
     "winston": "^3.10.0"
   },
