--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@fastify/cors": "^8.3.0",
     "@fastify/helmet": "^11.1.1",
     "@fastify/rate-limit": "^8.0.3",
+    "@fastify/static": "^6.11.2",
     "@types/dotenv": "^8.2.0",
     "@types/joi": "^17.2.3",
     "colorette": "^2.0.20",
@@ -52,12 +53,14 @@
     "faker": "^6.6.6",
     "fastify": "^4.23.0",
     "fastify-mongodb-sanitizer": "^1.2.2",
+    "fastify-multer": "^2.0.3",
     "http-status": "^1.7.0",
     "joi": "^17.10.2",
     "mongoose": "^7.5.1",
     "mongoose-paginate-v2": "^1.7.4",
     "pino": "^8.15.4",
     "pino-pretty": "^10.2.0",
+    "uuid": "^9.0.1",
     "winston": "^3.10.0"
   },
   "lint-staged": {
